# reactive-signals

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: test.yml
arena-link-tree/: Cargo.toml
arena-link-tree/benches/: create.rs  delete.rs  discard.rs  sum.rs  tree_bench.rs
arena-link-tree/src/: ascii.rs  availability.rs  iter.rs  lib.rs  node.rs  node_id.rs  tree.rs
arena-link-tree/src/tests/: deep.rs  iter.rs  mod.rs  reuse_ids.rs  reuse_tree.rs  sub_tree.rs  three_children.rs  wide.rs
arena-tree/: Cargo.toml
arena-tree/benches/: create.rs  discard.rs  sum.rs
arena-tree/src/: ascii.rs  availability.rs  flag_vec.rs  iter.rs  lib.rs  tree.rs
arena-tree/src/tests/: reuse_ids.rs  sub_tree.rs  three_children.rs
benchmarks/: Cargo.toml
benchmarks/benches/: leptos_originals.rs
benchmarks/examples/: leptos_heap.rs
benchmarks/src/: lib.rs
effective/: Cargo.toml
effective/benches/: create_scopes.rs  delete_scopes.rs  signal_propagation.rs
effective/src/: any_func.rs  lib.rs  runtime.rs  runtime_inner.rs  scope.rs  scope_inner.rs  signal.rs  signal_id.rs  signal_inner.rs  tests.rs  updater.rs
effective/src/tests/: mod.rs  scope_test.rs  signal_test.rs
reactive-signals/: Cargo.toml
reactive-signals/benches/: create_scopes.rs  create_signals.rs  deep_update.rs  discard_scopes.rs  signal_propagation.rs  tree_create.rs  tree_discard.rs  tree_sum.rs
reactive-signals/examples/: creation_flamegraph.rs  heap_profiling.rs  propagation_flamegraph.rs
reactive-signals/src/: lib.rs  macros.rs  readme.tpl.md  runtime.rs
reactive-signals/src/arena_tree/: ascii.rs  availability.rs  flag_arr.rs  iter.rs  mod.rs  node.rs  tree.rs
reactive-signals/src/arena_tree/tests/: deep.rs  iter.rs  mod.rs  reuse_ids.rs  reuse_tree.rs  sub_tree.rs  three_children.rs  wide.rs
reactive-signals/src/iter/: mod.rs  ref_vec_elem.rs  signal_iter.rs  tests.rs
reactive-signals/src/primitives/: any_data.rs  any_data2.rs  arr_vec.rs  dyn_func.rs  dyn_func2.rs  mod.rs  signal_set.rs  u15_bool.rs
reactive-signals/src/runtimes/: client.rs  inner.rs  mod.rs  server.rs  test_client.rs
reactive-signals/src/runtimes2/: inner.rs  mod.rs
reactive-signals/src/scope/: mod.rs  scope.rs  scope_inner.rs  tests.rs
reactive-signals/src/scope2/: mod.rs  scope.rs  scope_inner.rs  tests.rs
reactive-signals/src/signals/: mod.rs  signal_accessors.rs  signal_id.rs  signal_inner.rs  signal_new.rs  tests.rs  updater.rs
reactive-signals/src/signals/kinds/: client.rs  data.rs  func.rs  server.rs
reactive-signals/src/signals/types/: mod.rs
reactive-signals/src/signals2/: mod.rs  signal_accessors.rs  signal_id.rs  signal_inner.rs  signal_new.rs  updater.rs
reactive-signals/src/signals2/kinds/: client.rs  data.rs  func.rs  mod.rs  server.rs
reactive-signals/src/signals2/types/: mod.rs  server.rs
reactive-signals/src/tests/: mod.rs  profile.rs  size_test.rs
reactive-signals/tests/: integration.rs
reactor/: Cargo.toml
reactor/benches/: create_scopes.rs  create_signals.rs  delete_scopes.rs  discard_scopes.rs  signal_propagation.rs
reactor/examples/: creation_flamegraph.rs  heap_profiling.rs  propagation_flamegraph.rs  propagation_perf.rs
reactor/src/: lib.rs  macros.rs  primitives.rs  profile.rs  runtime.rs  runtime_inner.rs  scope.rs  scope_inner.rs  scope_inner_unsafe.rs  signal.rs  signal_id.rs  signal_inner.rs  signal_kind.rs  updater.rs
reactor/src/iter/: id_vec.rs  mod.rs  ref_vec_elem.rs  signal_iter.rs  tests.rs  vec_tree_iter.rs
reactor/src/primitives/: any_data.rs  any_data_unsafe.rs  arr_vec.rs  data_compare.rs  dyn_func.rs  mod.rs  ref_func.rs  signal_set.rs  signal_set_unsafe.rs  signal_type.rs  sorted_vec.rs  u15_bool.rs  u31_bool.rs
reactor/src/runtimes/: client.rs  inner.rs  mod.rs  pool.rs  server.rs  single.rs  single_unsafe.rs  staticrt.rs  staticrt_unsafe.rs  test_client.rs
reactor/src/scope/: mod.rs  scope.rs  scope_inner.rs  tests.rs
reactor/src/signal/: data_signal.rs  func_signal.rs  mod.rs  signal_accessors.rs  signal_id.rs  signal_inner.rs  signal_kind.rs  signal_new.rs  signal_type.rs  tests.rs  updater.rs
reactor/src/signal/kinds/: client.rs  data.rs  func.rs  server.rs
reactor/src/signal/types/: data.rs  func.rs  mod.rs
reactor/src/signals/: mod.rs  signal_accessors.rs  signal_id.rs  signal_inner.rs  signal_new.rs  updater.rs
reactor/src/signals/kinds/: func.rs
reactor/src/signals/types/: client.rs  data.rs  func.rs  mod.rs  server.rs
reactor/src/tests/: mod.rs  profile.rs  scope_test.rs  signal_test.rs  size_test.rs
reactor/tests/: integration.rs
src/: lib.rs  runtime.rs  scope.rs  signal.rs  tests.rs
