[package]
name = "arena-link-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
insta = "1.28"
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = ["ascii-tree"]
ascii-tree = []


[[bench]]
name = "tree_bench"
harness = false
