[package]
name = "effective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["extra-traits"]
extra-traits = []

[dependencies]
arena-link-tree = { path = "../arena-link-tree" }
bitvec = { version = "1.0", no-default-features = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "create_scopes"
harness = false

[[bench]]
name = "signal_propagation"
harness = false

[[bench]]
name = "delete_scopes"
harness = false
