[package]
name = "reactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["extra-traits"]
extra-traits = []
flamegraph = ["inferno"]

[dependencies]
arena-link-tree = { path = "../arena-link-tree" }
bitvec = "1.0"

# Optional: used only when running example through Criterion & pprof
criterion = { version = "0.4", optional = true }
inferno = { version = "0.11", default-features = false, features = [
  "nameattr",
], optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }
insta = "1.28"

[[bench]]
name = "create_scopes"
harness = false

[[bench]]
name = "signal_propagation"
harness = false

[[bench]]
name = "discard_scopes"
harness = false

[[example]]
name = "propagation_perf"
required-features = ["flamegraph", "criterion"]
