[package]
name = "reactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["extra-traits"]
extra-traits = []
profile = ["dep:pprof", "dep:criterion"]

[dependencies]
arena-link-tree = { path = "../arena-link-tree" }
bitvec = "1.0"

# Optional: used only when benchmarking and running profiling examples
criterion = { version = "0.4", features = ["html_reports"], optional = true }
pprof = { version = "0.11", features = [
  "flamegraph",
  "frame-pointer",
  "criterion",
], optional = true }

[dev-dependencies]
insta = "1.28"

[[bench]]
name = "create_scopes"
harness = false
required-features = ["profile"]

[[bench]]
name = "signal_propagation"
harness = false
required-features = ["profile"]

[[bench]]
name = "discard_scopes"
harness = false
required-features = ["profile"]

[[example]]
name = "propagation_flamegraph"
required-features = ["profile"]

[[example]]
name = "creation_flamegraph"
required-features = ["profile"]
